@@ -3,6 +3,9 @@ Version 1.3.13+svn:
    * The Hammer of Thursagan:
      * 'Invaders' if there weren't enough free tiles to spawn all indigs the 
        game would enter an infinite loop (bug #10621)
+ * graphics:
+   * overlays are properly drawn at the top row (eg forrest) (bug #10238)
+   * mountains no longer have a hill as base
  * language and i18n:
    * updated translations: Chinese, Italian, Lithuanian
  * multiplayer:
